@@ -1,5 +1,5 @@
 AUX daneel-ai 39 RMD160 05ce631da57ca70db705f4392be946c552bbb2e1 SHA1 963f9e002358ecc2879b266bee10e717657fabb1 SHA256 d38023d0f258efd1915f149812de790ddb3c0eaabdee331bdb48c25ad4f36b74
-DIST daneel-ai-0.0.2.tar.bz2 18341 RMD160 241c8aaa739fc8e4c4768301e897c62e2a66e34e SHA1 f7951468a558344c4f2cbee03acddaae2e38419c SHA256 58c6e2571ef26fd461f2ac606df6fc24bf03f9aa3a0a39e0ec8146cf49f23f4b
-EBUILD daneel-ai-0.0.2.ebuild 1357 RMD160 5f97eb383c529498d8567eac19ccecadfebf39fe SHA1 65a025439cf4b1e64bd117b188ecf9e1c1c86daf SHA256 9cea609b67b6115d85dfcb8dba7a9e53a00ccda432cd87f56ff1d5e3d2f3e9cf
-MISC ChangeLog 480 RMD160 5cfbbf72b03636ba4f3f434330264d75d9fe1eff SHA1 2ae6c6db286d62a3000d0c4fdab2ebbbd5893203 SHA256 a780cd3da8579413bf4d0fc199e7cfd7abb58a2b723ddba16d66c276a30c69fd
+DIST daneel-ai-0.0.3.tar.bz2 19563 RMD160 85090257de39af801dc69a9574b4bfe8b1b32c48 SHA1 35ca3df0fee820068d962ebba1927fac6b0b683d SHA256 92a838c956b7483ca45ff39dbd7b5d60c078b073060f1ff68b77a0d5f86d203a
+EBUILD daneel-ai-0.0.3.ebuild 691 RMD160 7bb8ef88594e38cebb7bcaa6562e348b53a2b28a SHA1 2813f997d4ae55536a3d714798176a56f22bd780 SHA256 8563cac4980c466c524a29271d2ffd87e0e65762081c41e3eea7e1aefe45d66d
+MISC ChangeLog 603 RMD160 95c02443afbf93830d3a7cc5dcefd04f983a5fdd SHA1 5df7261cdac6b93fbb8035ceaf353813c59ae135 SHA256 432b8c99e55657f5d4d0f62a6366dec6bd97078099d8a714b7e7e89559b7a8c4
 MISC metadata.xml 334 RMD160 8096c25a9bf6294c2237efdf06ba6c3fd7d86d00 SHA1 d0d088119890d7e1a770910f6ec48a87f687a276 SHA256 87ff1e2c137900f3f39644b37aa3639241e02c56284e55ab64cbf6388b03c91f
